--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --inspect server.js",
+    "tunnel": "C:/ngrok/ngrok.exe http 8080"
   },
   "engines": {
     "node": ">=6.0.0"
@@ -22,11 +24,15 @@
   },
   "homepage": "https://github.com/Quantiphi/webhook-boilerplate#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "dialogflow-fulfillment": "Quantiphi/dialogflow-fulfillment-builder",
     "dialogflow-fulfillment-builder": "github:Quantiphi/dialogflow-fulfillment-builder",
+    "dotenv": "^10.0.0",
     "express": "^4.16.3",
     "express-winston": "^4.0.1",
+    "firebase-admin": "^10.0.1",
     "helmet": "^3.21.2",
+    "nodemon": "^2.0.15",
     "semver": "^7.3.2",
     "winston": "^3.0.0"
   },
